# circleci-to-gha

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
circleci_to_gha/: README.md  ai_client.py  cli.py  config_parser.py  generator.py  init.py
circleci_to_gha/prompts/: examples.txt  init.py  system_prompt.txt
